changed img file ext

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,7 +3,7 @@ Homepage Styles
 **************************/
 
 .jumbotron {
-  background: url(../img/banner.jpg) no-repeat center center;
+  background: url(../img/banner.JPG) no-repeat center center;
   background-size: cover;
   font-size: 1.3rem;
   padding: 2em 0;
