--- a/css/app.css
+++ b/css/app.css
@@ -131,7 +131,7 @@ Header
 Homepage Styles
 **************************/
 .jumbotron {
-  background: url(../img/banner.jpg) no-repeat center center;
+  background: url(../img/banner.JPG) no-repeat center center;
   background-size: cover;
   font-size: 1.3rem;
   padding: 2em 0; }
