--- a/css/app.css
+++ b/css/app.css
@@ -45,7 +45,7 @@ a {
   text-decoration: none; }
 
 section {
-  padding: 2em 0; }
+  padding: 0 0 2em 0; }
 
 .container {
   max-width: 1200px;
@@ -120,10 +120,15 @@ Header
       margin-left: auto; } }
   .main-nav a {
     text-transform: uppercase;
-    padding: 0.6em;
+    padding: 0.2em;
+    font-size: 0.9em;
     margin: auto;
     border-radius: 4px;
     transition: background-color 0.3s ease-in-out; }
+    @media (min-width: 768px) {
+      .main-nav a {
+        padding: 0.6em;
+        font-size: 1em; } }
     .main-nav a:hover {
       background-color: #23527c; }
 
@@ -134,7 +139,7 @@ Homepage Styles
   background: url(../img/banner.JPG) no-repeat center center;
   background-size: cover;
   font-size: 1.3rem;
-  padding: 2em 0; }
+  padding: 1em 0; }
   .jumbotron img {
     width: 160px; }
 
@@ -143,20 +148,28 @@ Homepage Styles
     display: flex;
     flex-flow: column nowrap;
     margin-right: auto;
+    padding-top: 1.5em;
     padding-left: 2em;
     align-items: flex-start; }
     .jumbotron-title > * {
       margin: 0; } }
 
+@media (min-width: 768px) {
+  .jumbotron-blurb-container {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    justify-content: space-around; } }
+
 .jumbotron-blurb {
   max-width: 520px;
   margin: 1em auto 2em auto;
-  font-size: 1em;
+  font-size: 0.9em;
   border-radius: 4px;
   background-color: rgba(35, 82, 124, 0.8); }
   @media (min-width: 768px) {
     .jumbotron-blurb {
-      margin: 1em 0 1em 0; } }
+      margin: 1em 0 1em 1em; } }
 
 .exam-board-logos img {
   width: 80px;
@@ -173,7 +186,7 @@ Homepage Styles
   color: #141414; }
   @media (min-width: 768px) {
     .intro-section {
-      padding: 4em 1em; } }
+      padding: 3em 1em; } }
   .intro-section .btn {
     display: inline-block;
     border-color: #141414;
@@ -181,7 +194,11 @@ Homepage Styles
   .intro-section .intro-blurb {
     text-align: center;
     max-width: 40em;
-    margin: auto; }
+    margin: auto;
+    font-weight: bold; }
+    .intro-section .intro-blurb p {
+      text-align: justify;
+      font-weight: bold; }
 
 .intro-section-2 {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/intro-img02.jpg) no-repeat center center;
@@ -311,11 +328,6 @@ Timetable Styles
     .flex-row img {
       max-width: 500px;
       max-height: 100%; } }
-
-.ttable-blurb {
-  max-width: 500px;
-  margin: auto;
-  padding: 1em 0; }
 
 .ttable-price {
   display: block;
