--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,7 +6,10 @@ Homepage Styles
   background: url(../img/banner.JPG) no-repeat center center;
   background-size: cover;
   font-size: 1.3rem;
-  padding: 2em 0;
+  padding: 1em 0;
+  h1 {
+
+  }
   img {
     width: 160px;
   }
@@ -17,6 +20,7 @@ Homepage Styles
     display: flex;
     flex-flow: column nowrap;
     margin-right: auto;
+    padding-top: 1.5em;
     padding-left: 2em;
     align-items: flex-start;
     & > * {
@@ -25,14 +29,23 @@ Homepage Styles
   }
 }
 
+.jumbotron-blurb-container {
+  @media (min-width: $brk-md) {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+}
+
 .jumbotron-blurb {
   max-width: 520px;
   margin: 1em auto 2em auto;
-  font-size: 1em;
+  font-size: 0.9em;
   border-radius: 4px;
   background-color: rgba(35, 82, 124, 0.8);
   @media (min-width: $brk-md) {
-    margin: 1em 0 1em 0;
+    margin: 1em 0 1em 1em;
   }
 }
 
@@ -54,7 +67,7 @@ Homepage Styles
   background-color: #efefef;
   color: $text-dark;
   @media (min-width: $brk-md) {
-    padding: 4em 1em;
+    padding: 3em 1em;
   }
   .btn {
     display: inline-block;
@@ -65,8 +78,14 @@ Homepage Styles
     text-align: center;
     max-width: 40em;
     margin: auto;
+    font-weight: bold;
+    p {
+      text-align: justify;
+      font-weight: bold;
+    }
   }
 }
+
 
 .intro-section-2 {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
