--- a/css/app.css
+++ b/css/app.css
@@ -29,7 +29,7 @@ img {
 h1, h2, h3 {
   text-align: center;
   font-weight: inherit;
-  font-size: 2em;
+  font-size: 1.5em;
   padding: 0.5em;
   margin: 0; }
 
@@ -136,9 +136,9 @@ Header
 Homepage Styles
 **************************/
 .jumbotron {
-  background: url(../img/banner.JPG) no-repeat center center;
+  background: url(../img/banner.JPG) no-repeat center 30%;
   background-size: cover;
-  font-size: 1.3rem;
+  font-size: 1.1em;
   padding: 1em 0; }
   .jumbotron img {
     width: 160px; }
@@ -148,8 +148,7 @@ Homepage Styles
     display: flex;
     flex-flow: column nowrap;
     margin-right: auto;
-    padding-top: 1.5em;
-    padding-left: 2em;
+    padding: 2em;
     align-items: flex-start; }
     .jumbotron-title > * {
       margin: 0; } }
@@ -164,7 +163,6 @@ Homepage Styles
 .jumbotron-blurb {
   max-width: 520px;
   margin: 1em auto 2em auto;
-  font-size: 0.9em;
   border-radius: 4px;
   background-color: rgba(35, 82, 124, 0.8); }
   @media (min-width: 768px) {
