--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,13 +3,10 @@ Homepage Styles
 **************************/
 
 .jumbotron {
-  background: url(../img/banner.JPG) no-repeat center center;
+  background: url(../img/banner.JPG) no-repeat center 30%;
   background-size: cover;
-  font-size: 1.3rem;
+  font-size: 1.1em;
   padding: 1em 0;
-  h1 {
-
-  }
   img {
     width: 160px;
   }
@@ -20,8 +17,7 @@ Homepage Styles
     display: flex;
     flex-flow: column nowrap;
     margin-right: auto;
-    padding-top: 1.5em;
-    padding-left: 2em;
+    padding: 2em;
     align-items: flex-start;
     & > * {
       margin: 0;
@@ -41,7 +37,6 @@ Homepage Styles
 .jumbotron-blurb {
   max-width: 520px;
   margin: 1em auto 2em auto;
-  font-size: 0.9em;
   border-radius: 4px;
   background-color: rgba(35, 82, 124, 0.8);
   @media (min-width: $brk-md) {
