--- a/css/app.css
+++ b/css/app.css
@@ -75,6 +75,7 @@ button {
 .jumbotron {
   background: url(../img/banner.JPG) no-repeat center 30%;
   background-size: cover;
+  min-height: 300px;
   font-size: 1.1em;
   padding: 1em 0; }
   .jumbotron img {
@@ -209,6 +210,18 @@ Homepage Styles
 /*************************
 About
 **************************/
+.test-link {
+  display: inline-block;
+  font-size: 1.2em;
+  border-radius: 4px;
+  margin: 0.5em 0;
+  padding: 0.2em;
+  text-decoration: underline; }
+
+.test-item {
+  max-width: 600px;
+  margin: 2em auto; }
+
 .about-section {
   margin: 3em auto;
   max-width: 800px; }
