--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -99,6 +99,7 @@ button {
 .jumbotron {
   background: url(../img/banner.JPG) no-repeat center 30%;
   background-size: cover;
+  min-height: 300px;
   font-size: 1.1em;
   padding: 1em 0;
   img {
