--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -5,6 +5,7 @@ Contact Page Styles
 .contact-blurb {
   max-width: 600px;
   text-align: center;
+  padding-bottom: 2em;
   margin: auto;
   border-radius: 4px;
   background-color: rgba(35, 82, 124, 0.8);
