--- a/css/app.css
+++ b/css/app.css
@@ -384,6 +384,9 @@ Venues Page Styles
     justify-content: center;
     align-items: center; } }
 
+.dl-logo {
+  max-width: 180px; }
+
 /*************************
 Contact Page Styles
 **************************/
