--- a/scss/_classes.scss
+++ b/scss/_classes.scss
@@ -5,7 +5,7 @@ Classes
 #classes-buttons {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   max-width: 800px;
   margin: auto;
   @media (min-width: $brk-md) {
@@ -39,6 +39,8 @@ Classes
   .classes-item-blurb {
     background-color: rgba(35, 82, 124, 0.5);
     border-radius: 4px;
+    margin: 0 auto 1em auto;
+    max-width: 30em;
   }
   .btn {
     text-align: center;
