--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -5,7 +5,7 @@ Gallery
 #gallery-buttons {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   max-width: 800px;
   margin: 1em auto;
   @media (min-width: $brk-md) {
