--- a/scss/_classes.scss
+++ b/scss/_classes.scss
@@ -26,10 +26,10 @@ Classes
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
   div {
-    margin: 1em;
+    margin: 1em 0.5em;
   }
   img {
     @media (min-width: $brk-sm) {
@@ -40,6 +40,9 @@ Classes
     background-color: rgba(35, 82, 124, 0.5);
     border-radius: 4px;
     margin: 0 auto 1em auto;
+    @media (min-width: $brk-lrg) {
+      margin-top: 3.75em;
+    }
     max-width: 30em;
   }
   .btn {
