--- a/scss/_timetable.scss
+++ b/scss/_timetable.scss
@@ -11,7 +11,7 @@ Timetable Styles
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin: auto;
+  margin: 1em auto;
 }
 
 .ttable-section {
